--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/runtime": "^7.2.0",
+    "apollo-server-express": "^2.4.7",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
@@ -25,14 +26,16 @@
     "del": "^3.0.0",
     "eslint": "^5.10.0",
     "eslint-plugin-jest": "^22.1.2",
+    "express": "^4.16.4",
+    "graphql": "^14.0.2",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-jsdoc3": "^2.0.0",
     "gulp-sourcemaps": "^2.6.4",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "regenerator-runtime": "^0.13.1",
-    "graphql": "^14.0.2"
+    "source-map-support": "^0.5.10"
   },
   "peerDependencies": {
     "graphql": "^14.0.2"
