added upload, licenses and updated dependencies

--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,15 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env", {
-        "targets": {
-          "node": "current"
-        },
-        "useBuiltIns": "usage"
-      }
-    ]
+  "presets": [[
+    "@babel/preset-env", {
+      "targets": {
+        "node": "current",
+      },
+      "useBuiltIns": "entry",
+      "corejs": "3",
+    }],
   ],
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-proposal-class-properties",
-    "babel-plugin-autobind-class-methods"
   ],
-  "sourceMaps": "inline",
-  "retainLines": true
 }
